Organizando a Lista por ID